Switch operation gradle fixes, message mismatch fixes, change directory logic changes