@@ -4,7 +4,6 @@ plugins {
     id('com.diffplug.spotless') version '6.25.0'
 }
 
-
 group 'edu.austral.ingsis'
 version '1.0-SNAPSHOT'
 
@@ -18,15 +17,25 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
+    jvmArgs += ['--enable-preview']
+    finalizedBy jacocoTestReport
+}
+
 jacoco {
     toolVersion = "0.8.11"
     reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
-}
-
-
-test {
-    useJUnitPlatform()
-    finalizedBy jacocoTestReport
 }
 
 jacocoTestReport {
@@ -43,9 +52,7 @@ jacocoTestCoverageVerification {
     }
 }
 
-
 // Code formatting configuration
-
 spotless {
     java {
         googleJavaFormat()
